Fix minor layout issue

--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -12,7 +12,7 @@
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
-	max-width: 500px;
+	max-width: 1400px;
 	justify-content: center;
 	padding: 2%;
 	align-items: center;
